--- a/megamenu-preact-app/src/index.html
+++ b/megamenu-preact-app/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Megamenu Preact Development</title>
+
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -23,6 +23,27 @@
     <script>
         // Mock data for development
         window.megamenuData = {
+            smallMenu: {
+                id: 300,
+                items: [
+                    {id: 300, title: "HEERF", url: "#"},
+                    {id: 301, title: "Cyber Incident", url: "#"},
+                    {id: 302, title: "Apply", url: "#"},
+                    {id: 303, title: "Visit", url: "#"},
+                    {id: 304, title: "Give", url: "#"}
+                ]
+            },
+            dashboards: {
+                id: 200,
+                items: [
+                    {id: 200, title: "Current Students", url: "#"},
+                    {id: 201, title: "Online Students", url: "#"},
+                    {id: 202, title: "Future Students", url: "#"},
+                    {id: 203, title: "Parents and Families", url: "#"},
+                    {id: 204, title: "Faculty and Staff", url: "#"},
+                    {id: 205, title: "Alumni", url: "#"}
+                ]
+            },
             topMenu: {
                 id: 1,
                 items: [
@@ -109,7 +130,6 @@
 </head>
 <body>
     <div class="container">
-        <h1>Megamenu Preact Development</h1>
         <div id="megamenu-container"></div>
     </div>
 </body>
