--- a/megamenu-preact-app/src/index.html
+++ b/megamenu-preact-app/src/index.html
@@ -8,11 +8,9 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
             margin: 0;
-            padding: 20px;
         }
         
         .container {
-            max-width: 1200px;
             margin: 0 auto;
         }
         
@@ -26,11 +24,11 @@
             smallMenu: {
                 id: 300,
                 items: [
-                    {id: 300, title: "HEERF", url: "#"},
-                    {id: 301, title: "Cyber Incident", url: "#"},
-                    {id: 302, title: "Apply", url: "#"},
-                    {id: 303, title: "Visit", url: "#"},
-                    {id: 304, title: "Give", url: "#"}
+                    {id: 300, title: "Visit", url: "#"},
+                    {id: 301, title: "Give", url: "#"},
+                    {id: 302, title: "Directory", url: "#"},
+                    {id: 303, title: "Contact", url: "#"},
+                    {id: 304, title: "Apply Now", url: "#"}
                 ]
             },
             dashboards: {
