--- a/megamenu-preact-app/public/index.html
+++ b/megamenu-preact-app/public/index.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>Megamenu Preact Development</title>
+    <link rel="stylesheet" href="/style.css">
     <style>
+        @font-face {
+            font-family: 'zlife';
+            src: url('/life/life.eot'); /* IE9 Compat Modes */
+            src: url('/life/life.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+                 url('/life/life.woff') format('woff'), /* Modern Browsers */
+                 url('/life/life.ttf') format('truetype'), /* Safari, Android, iOS */
+                 url('/life/life.svg#life') format('svg'); /* Legacy iOS */
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
             margin: 0;
+            padding: 20px;
         }
-        
         .container {
+            max-width: 1200px;
             margin: 0 auto;
         }
-        
         h1 {
             color: #333;
         }
@@ -21,27 +33,6 @@
     <script>
         // Mock data for development
         window.megamenuData = {
-            smallMenu: {
-                id: 300,
-                items: [
-                    {id: 300, title: "Visit", url: "#"},
-                    {id: 301, title: "Give", url: "#"},
-                    {id: 302, title: "Directory", url: "#"},
-                    {id: 303, title: "Contact", url: "#"},
-                    {id: 304, title: "Apply Now", url: "#"}
-                ]
-            },
-            dashboards: {
-                id: 200,
-                items: [
-                    {id: 200, title: "Current Students", url: "#"},
-                    {id: 201, title: "Online Students", url: "#"},
-                    {id: 202, title: "Future Students", url: "#"},
-                    {id: 203, title: "Parents and Families", url: "#"},
-                    {id: 204, title: "Faculty and Staff", url: "#"},
-                    {id: 205, title: "Alumni", url: "#"}
-                ]
-            },
             topMenu: {
                 id: 1,
                 items: [
@@ -125,25 +116,11 @@
             }
         };
     </script>
-  <link rel="stylesheet" href="/style.css">
-  <style>
-    @font-face {
-      font-family: 'life';
-      src: url('/life/life.eot'); /* IE9 Compat Modes */
-      src: url('/life/life.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-           url('/life/life.woff') format('woff'), /* Modern Browsers */
-           url('/life/life.ttf') format('truetype'), /* Safari, Android, iOS */
-           url('/life/life.svg#life') format('svg'); /* Legacy iOS */
-      font-weight: normal;
-      font-style: normal;
-      font-display: swap;
-    }
-    /* Example usage: body { font-family: 'life', sans-serif; } */
-  </style>
 </head>
 <body>
     <div class="container">
+        <h1>Megamenu Preact Development</h1>
         <div id="megamenu-container"></div>
     </div>
-</body>
+<script defer src="megamenu.js"></script></body>
 </html>
