desktop styles close

--- a/megamenu-preact-app/src/index.html
+++ b/megamenu-preact-app/src/index.html
@@ -11,11 +11,7 @@
         }
         
         .container {
-            margin: 0 auto;
-        }
-        
-        h1 {
-            color: #333;
+            margin: 0;
         }
     </style>
     <script>
@@ -142,7 +138,7 @@
   </style>
 </head>
 <body>
-    <div class="container">
+    <div class="">
         <div id="megamenu-container"></div>
     </div>
 </body>
