extra menu for resources

--- a/megamenu-preact-app/src/index.html
+++ b/megamenu-preact-app/src/index.html
@@ -26,6 +26,31 @@
                     {id: 304, title: "Apply Now", url: "#"}
                 ]
             },
+            extraMenu: {
+                id: 235,
+                items: [
+                    {
+                        id: 54913,
+                        title: "Clinics",
+                        url: "#"
+                    },
+                    {
+                        id: 54914,
+                        title: "Academic Calendar",
+                        url: "#"
+                    },
+                    {
+                        id: 54915,
+                        title: "Directory",
+                        url: "#"
+                    },
+                    {
+                        id: 54916,
+                        title: "Library",
+                        url: "#"
+                    }
+                ]
+            },
             dashboards: {
                 id: 200,
                 items: [
