Desktop opening and closing

--- a/megamenu-preact-app/public/index.html
+++ b/megamenu-preact-app/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Megamenu Preact Development</title>
     <link rel="stylesheet" href="/style.css">
+    
     <style>
         @font-face {
             font-family: 'zlife';
@@ -124,3 +125,5 @@
     </div>
 <script defer src="megamenu.js"></script></body>
 </html>
+<script src="https://cse.google.com/cse.js?cx=a702cf19e52c34411"></script>
+    
